# solana-vrf

./: .gitignore  Cargo.toml  README.md
callback/: README.md
callback/js/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
callback/js/src/: index.ts  state.ts
callback/js/src/types/: orao_vrf_cb.json  orao_vrf_cb.ts
callback/rust/examples/cpi/: Anchor.toml  README.md  cli.ts  package-lock.json  package.json  test_keypair.json  tsconfig.json
callback/rust/examples/cpi/programs/example-client/: Cargo.toml
callback/rust/examples/cpi/programs/example-client/src/: constants.rs  lib.rs
callback/rust/examples/cpi/programs/example-client/src/instructions/: client_level_callback.rs  initialize.rs  mod.rs  request.rs  request_alt.rs  request_level_callback.rs  request_level_callback_alt.rs
callback/rust/examples/cpi/programs/example-client/src/state/: additional_account.rs  client_state.rs  mod.rs
callback/rust/examples/cpi/tests/: example_client.ts
callback/rust/sdk/: Cargo.toml  README.md
callback/rust/sdk/src/: constants.rs  error.rs  lib.rs  utils.rs
callback/rust/sdk/src/events/: callback_updated.rs  called_back.rs  fulfilled.rs  mod.rs  registered.rs  requested.rs  requested_alt.rs  responded.rs  transferred.rs  withdrawn.rs
callback/rust/sdk/src/instructions/: mod.rs
callback/rust/sdk/src/instructions/configure/: handler.rs  mod.rs
callback/rust/sdk/src/instructions/fulfill/: handler.rs  mod.rs
callback/rust/sdk/src/instructions/fulfill_alt/: handler.rs  mod.rs
callback/rust/sdk/src/instructions/initialize/: handler.rs  mod.rs
callback/rust/sdk/src/instructions/register/: handler.rs  mod.rs
callback/rust/sdk/src/instructions/request/: handler.rs  mod.rs
callback/rust/sdk/src/instructions/request_alt/: handler.rs  mod.rs
callback/rust/sdk/src/instructions/set_callback/: handler.rs  mod.rs
callback/rust/sdk/src/instructions/transfer/: handler.rs  mod.rs
callback/rust/sdk/src/instructions/withdraw/: handler.rs  mod.rs
callback/rust/sdk/src/sdk/: error.rs  events.rs  misc.rs  mod.rs  priority.rs  state.rs  wait.rs
callback/rust/sdk/src/sdk/instructions/: mod.rs  register.rs  set_callback.rs  transfer.rs  withdraw.rs
callback/rust/sdk/src/state/: client.rs  mod.rs  network_state.rs  request.rs  request_alt.rs
js/: .editorconfig  README.md  package-lock.json  package.json  tsconfig.json  typedoc.json
js/lib/: index.browser.esm.js  index.cjs.js  index.d.ts  index.esm.js  index.iife.js  index.iife.min.js
js/src/: index.ts  state.ts
js/src/types/: orao_vrf.json  orao_vrf.ts
js/tests/: index.ts
rust/: .gitignore  Cargo.toml  README.md
rust/cpi-example/: Cargo.toml  README.md
rust/cpi-example/src/: error.rs  instructions.rs  lib.rs  misc.rs  processor.rs  state.rs
rust/examples/: Cargo.toml  README.md  get_randomness.rs
rust/examples/cpi/: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
rust/examples/cpi/migrations/: deploy.ts
rust/examples/cpi/programs/russian-roulette/: Cargo.toml
rust/examples/cpi/programs/russian-roulette/src/: lib.rs  misc.rs  state.rs
rust/examples/cpi/tests/: russian-roulette.ts
rust/examples/off-chain/: Cargo.toml  README.md
rust/examples/off-chain/src/: command.rs  main.rs
rust/examples/src/: main.rs
rust/sdk/: Cargo.toml  README.md
rust/sdk/src/: error.rs  events.rs  lib.rs  sdk.rs  state.rs
rust/sdk/src/sdk/: events.rs  mod.rs
rust/sdk/src/state/: mod.rs  network_state.rs  randomness.rs  randomness_v2.rs
rust/src/: env.rs  error.rs  instructions.rs  lib.rs  state.rs  verify.rs
