[workspace]
members = ["rust/sdk", "rust/examples/off-chain"]
exclude = ["rust/examples/cpi"]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
anchor-client = { version = "0.29.0" }
ed25519-dalek = { version = "1.0.1" }
solana-cli-config = { version = "1.18" }
rand = { version = "0.8" }
