[workspace]
members = ["rust/sdk", "rust/examples/off-chain", "callback/rust/sdk"]
exclude = ["rust/examples/cpi", "callback/rust/examples/cpi"]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
anchor-client = { version = "0.30.1" }
ed25519-dalek = { version = "1.0.1" }
solana-cli-config = { version = "1.18" }
rand = { version = "0.8" }
bs58 = "0.4"
