[workspace]
members = ["rust/sdk", "rust/examples/off-chain"]
exclude = [
    "rust/examples/cpi",
    "callback/rust/examples/cpi",
    "callback/rust/sdk",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
anchor-client = { version = "0.31.0" }
ed25519-dalek = { version = "1.0.1" }
solana-cli-config = { version = "2.1.0" }
rand = { version = "0.8" }
bs58 = "0.4"
