[package]
name = "orao-solana-vrf"
version = "0.1.1"
edition = "2021"
authors = ["ORAO Devs <hello@orao.network>"]
description = "ORAO VRF on-chain Rust SDK for Solana"

[dependencies]

borsh = "0.9.1"
log = "0.4"
solana-client = "1.10.8"
solana-program = "1.10.8"
solana-sdk = "1.10.8"
thiserror = "1"
