[package]
name = "orao-solana-vrf"
version = "0.1.4"
edition = "2021"
authors = ["ORAO Devs <hello@orao.network>"]
homepage = "https://orao.network"
repository = "https://github.com/orao-network/solana-vrf/tree/master/rust"
license = "Apache-2.0"
keywords = ["solana", "vrf", "ed25519"]
description = "ORAO Verifiable Random Function for Solana."

[dependencies]

borsh = "0.9.3"
bs58 = "0.4"
ed25519-dalek = { version = "1.0.1", optional = true }
log = { version = "0.4.17", optional = true }
solana-client = { version = "1.10.17", optional = true }
solana-program = "1.10.17"
solana-sdk = { version = "1.10.17", optional = true }
solana-transaction-status = { version = "1.10.17", optional = true }
thiserror = "1.0.31"

[features]
default = ["sdk"]
sdk = ["solana-sdk", "solana-client", "solana-transaction-status", "ed25519-dalek", "log"]

[workspace]
members = ["cpi-example"]