[package]
name = "russian-roulette"
version = "0.1.0"
edition = "2021"

[lib]
name = "russian_roulette"
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = { version = "1.0.57", optional = true }
borsh = { version = "0.9.3", features = ["const-generics"] }
borsh-derive = "0.9.3"
env_logger = { version = "0.9.0", optional = true }
log = { version = "0.4.17", optional = true }
orao-solana-vrf = { path = "..", default-features = false }
rand = { version = "0.8.5", optional = true }
solana-program = "1.10.17"
solana-client = { version = "1.10.17", optional = true }
solana-sdk = { version = "1.10.17", optional = true }
solana-cli-config = { version = "1.10.17", optional = true }
structopt = { version = "0.3.26", optional = true }
thiserror = "1.0.31"

[features]
no-entrypoint = []
sdk = ["anyhow", "no-entrypoint", "rand", "solana-client", "solana-sdk", "orao-solana-vrf/sdk"]
cli = ["sdk", "solana-cli-config", "structopt", "log", "env_logger"]

[[bin]]
name = "russian_roulette"
required-features = ["cli"]
