[package]
name = "orao-solana-vrf"
version = "0.2.0"
edition = "2021"
authors = ["ORAO Devs <hello@orao.network>"]
homepage = "https://orao.network"
repository = "https://github.com/orao-network/solana-vrf"
license = "Apache-2.0"
keywords = ["solana", "vrf", "ed25519", "anchor"]
description = "ORAO Verifiable Random Function for Solana."

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
sdk = ["no-entrypoint", "anchor-client", "ed25519-dalek"]
default = ["sdk"]

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
anchor-client = { version = "0.25.0", optional = true }
ed25519-dalek = { version = "1.0.1", optional = true }

[dev-dependencies]
solana-cli-config = "1.10"
anchor-client = { version = "0.25.0", features = ["debug"] }
shellexpand = "2.1.0"
rand = "0.7.3"
byteorder = "1.4.3"
