[package]
name = "orao-solana-vrf"
version = "0.3.0"
edition = "2021"
authors = ["ORAO Devs <hello@orao.network>"]
homepage = "https://orao.network"
repository = "https://github.com/orao-network/solana-vrf"
license = "Apache-2.0"
keywords = ["solana", "vrf", "ed25519", "anchor"]
description = "ORAO Verifiable Random Function for Solana."

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
sdk = ["no-entrypoint", "anchor-client", "ed25519-dalek", "tokio", "thiserror"]
default = ["sdk"]

[dependencies]
anchor-lang.workspace = true
anchor-spl.workspace = true
anchor-client = { workspace = true, optional = true, features = ["async"] }
ed25519-dalek = { workspace = true, optional = true }
tokio = { version = "1", optional = true }
thiserror = { version = "1", optional = true }

[dev-dependencies]
byteorder = "1.4.3"
solana-cli-config.workspace = true
rand.workspace = true
anchor-client = { workspace = true, features = ["debug"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
