[package]
name = "off-chain"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8"
clap = { version = "4", features = ["derive", "env", "string"] }
anyhow = "1"
futures-util = "0.3"
tracing = "0.1.28"
solana-cli-config.workspace = true
anchor-client.workspace = true
anchor-lang.workspace = true
indicatif = "0.17"
orao-solana-vrf = { path = "../../sdk" }
tokio = { version = "1", features = ["full"] }
rand.workspace = true
