[package]
name = "russian-roulette"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "russian_roulette"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
sdk = ["no-entrypoint", "rand", "anchor-client"]
default = []

[dependencies]
anchor-client = { version = "0.26.0", optional = true }
anchor-lang = { version = "0.26.0", features = ["init-if-needed"] }
orao-solana-vrf = { path = "../../../../sdk", default-features = false, features = ["cpi"] }
rand = { version = "0.8", optional = true }
