[package]
name = "example-client"
version = "0.3.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "example_client"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "orao-solana-vrf-cb/idl-build"]

[dependencies]
anchor-lang = "0.31.0"

[dependencies.orao-solana-vrf-cb]
path = "../../../../sdk"
default-features = false
features = ["cpi"]
